courses/ciss350/n/asymptotics/exercises/3n3-5-42-n5-n2-1/traceback.txt
Traceback (most recent call last):
  File "/usr/lib64/python3.7/site-packages/latextool_basic.py", line 4383, in add
    d['pin_y'] = eval(expr) # depends on expr
  File "<string>", line 1
    abs(-3*n**3.5 + 42 n**5/(n**2 + 1))
                       ^
SyntaxError: invalid syntax
